OOM的一些认识